--- a/frontend/src/components/SignUpModal/SignUpModal.module.css
+++ b/frontend/src/components/SignUpModal/SignUpModal.module.css
@@ -12,7 +12,7 @@
   font-size: 28px;
   font-style: normal;
   font-weight: 800;
-  line-height: 32px; /* 114.286% */
+  line-height: 32px;
   letter-spacing: -0.56px;
   text-transform: uppercase;
 }
