--- a/frontend/src/components/PopularRecipes/PopularRecipes.module.css
+++ b/frontend/src/components/PopularRecipes/PopularRecipes.module.css
@@ -4,10 +4,12 @@
 }
 
 .title {
-  font-size: 1.25rem;
-  font-weight: 700;
+  font-size: 18px;
+  font-weight: 800;
+  line-height: 1.33333;
+  letter-spacing: -0.36px;
   color: var(--black);
-  margin-bottom: 40px;
+  margin-bottom: 32px;
   text-transform: uppercase;
 }
 
@@ -16,29 +18,33 @@
   grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
   gap: 20px;
 }
+@media screen and (min-width: 768px) {
+  .popular {
+    margin-top: 100px;
+    margin-bottom: 100px;
+  }
+  .title {
+    font-size: 24px;
+    line-height: 1.16667;
+    letter-spacing: -0.48px;
+    margin-bottom: 40px;
+  }
+  .list {
+    grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+    column-gap: 20px;
+    row-gap: 40px;
+  }
+
+}
+
 
 @media (min-width: 1440px) {
   .list {
     grid-template-columns: repeat(4, 1fr);
-    gap: 24px;
-  }
-}
-/* .container {
-  margin: 0 auto;
-  padding: 0 16px;
-  width: 100%;
-}
-
-@media screen and (min-width: 768px) {
-  .container {
-    padding: 0 32px;
-    max-width: 768px;
+    gap: 20px;
   }
 }
 
-@media screen and (min-width: 1440px) {
-  .container {
-    max-width: 1440px;
-    padding: 0 80px;
-  }
-} */
+
+
+
