--- a/frontend/src/components/RecipePreparation/RecipePreparation.module.css
+++ b/frontend/src/components/RecipePreparation/RecipePreparation.module.css
@@ -1,87 +1,75 @@
 .wrapper {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
+}
+.wrap {
+  padding: 0;
+}
+.title {
+  font-size: 18px;
+  font-weight: 800;
+  margin-bottom: 20px;
+  color: var(--black);
+  line-height: 1.33333;
+  letter-spacing: -0.36px;
+  text-transform: uppercase;
+}
 
-  }
-  .wrap{
-    padding: 0;
-  }
+.text {
+  font-size: 14px;
+  line-height: 1.42857;
+  color: var(--gray);
+  margin-bottom: 0;
+}
+.text + .text {
+  margin-top: 20px;
+}
+
+.favoriteBtn {
+  align-self: start;
+  font-size: 14px;
+  font-weight: 700;
+  padding: 14px 20px;
+  border: 1px solid var(--gray);
+  border-radius: 30px;
+  color: var(--gray);
+  background-color: transparent;
+  transition: all 0.3s ease;
+  cursor: pointer;
+  line-height: 1.42857;
+  letter-spacing: -0.28px;
+  text-transform: uppercase;
+  margin-top: 32px;
+}
+
+.favoriteBtn:hover {
+  background-color: var(--black);
+  color: var(--white);
+  border-color: var(--black);
+}
+@media (min-width: 768px) {
   .title {
-    font-size: 18px;
-    font-weight: 800;
-    margin-bottom: 20px;
-    color: var(--black);
-    line-height: 1.33333;
-    letter-spacing: -0.36px;
-    text-transform: uppercase;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: -0.4px;
   }
-  /* .text {
-    font-size: 14px;
-    line-height: 1.42857;
-    color: var(--gray);
-    white-space: pre-line;
-    margin-bottom: 32px;
-  } */
   .text {
-    font-size: 14px;
-    line-height: 1.42857;
-    color: var(--gray);
-    margin-bottom: 0; /* ось це тепер спрацює! */
+    font-size: 16px;
+    line-height: 1.5;
+    color: var(--dark-gray);
   }
-  .text + .text {
-    margin-top: 20px;
-  }
-  
   .favoriteBtn {
-    align-self: start;
-    font-size: 14px;
-    font-weight: 700;
-    padding: 14px 20px;
+    font-size: 16px;
+    padding: 16px 32px;
     border: 1px solid var(--gray);
-    border-radius: 30px;
-    color: var(--gray);
-    background-color: transparent;
-    transition: all 0.3s ease;
-    cursor: pointer;
-    line-height: 1.42857; 
-letter-spacing: -0.28px;
-    text-transform: uppercase;
-    margin-top: 32px; 
+    line-height: 1.5;
+    letter-spacing: -0.32px;
+    margin-top: 40px;
   }
-  
-  .favoriteBtn:hover {
-    background-color: var(--black);
-    color: var(--white);
-    border-color: var(--black);
-  }
-  @media (min-width: 768px) {
-    .title {
-      font-size: 24px;
-      
-    }
-    .text {
-      font-size: 18px;
-    }
-  }
-  
+}
 
-  /* .container {
-    margin: 0 auto;
-    padding: 0 16px;
-    width: 100%;
+@media screen and (min-width: 1440px) {
+  .favoriteBtn {
+    color: var(--dark-gray);
   }
-  
-  @media screen and (min-width: 768px) {
-    .container {
-      padding: 0 32px;
-      max-width: 768px;
-    }
-  }
-  
-  @media screen and (min-width: 1440px) {
-    .container {
-      max-width: 1440px;
-      padding: 0 80px;
-    }
-  }
-   */
+}
