--- a/frontend/src/components/ui/RecipeCard/RecipeCard.module.css
+++ b/frontend/src/components/ui/RecipeCard/RecipeCard.module.css
@@ -1,79 +1,45 @@
 .card {
   background-color: var(--white);
-  border-radius: 16px;
   width: 100%;
-}
-
-@media screen and (min-width: 768px) {
-  .card {
-    width: 342px;
-  }
-}
-
-@media screen and (min-width: 1440px) {
-  .card {
-    width: 290px;
-  }
 }
 
 .image {
   height: 230px;
   width: 100%;
   object-fit: cover;
-  border-radius: 16px;
-}
-
-@media screen and (min-width: 768px) {
-  .image {
-    height: 275px;
-    width: 342px;
-  }
-}
-
-@media screen and (min-width: 1440px) {
-  .image {
-    width: 290px;
-  }
+  border-radius: 30px;
+  margin-bottom: 16px;
 }
 
 .content {
   display: flex;
   flex-direction: column;
+  gap: 8px;
   flex-grow: 1;
 }
 
 .title {
-  margin-top: 16px;
   font-size: 18px;
-  font-weight: 700;
+  font-weight: 800;
+  line-height: 1.33333;
+  letter-spacing: -0.36px;
+  color: var(--black);
   text-transform: uppercase;
-}
-
-@media screen and (min-width: 768px) {
-  .title {
-    font-size: 20px;
-  }
 }
 
 .description {
   font-size: 14px;
-  margin-top: 8px;
   color: var(--dark-gray);
   font-weight: 500;
   overflow: hidden;
+  line-height: 1.42857;
+  letter-spacing: -0.28px;
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
 }
 
-@media screen and (min-width: 768px) {
-  .description {
-    font-size: 16px;
-  }
-}
-
 .wrapper {
-  margin-top: 8px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -87,41 +53,29 @@
   margin-right: 8px;
 }
 
-@media screen and (min-width: 768px) {
-  .avatar {
-    width: 40px;
-    height: 40px;
-  }
-}
-
 .author {
   font-size: 14px;
   display: flex;
   align-items: center;
   font-weight: 700;
+  line-height: 1.42857;
+  letter-spacing: -0.28px;
   color: var(--dark-gray);
   background: none;
   border: none;
   cursor: pointer;
   padding: 0;
 }
-
-@media screen and (min-width: 768px) {
-  .author {
-    font-size: 16px;
-  }
-}
-
 .wrap {
   display: flex;
-  gap: 8px;
+  gap: 4px;
 }
 
 .heart,
 .arrow {
   width: 32px;
   height: 32px;
-  border-radius: 50%;
+  border-radius: 30px;
   border: 1px solid var(--gray);
   background: transparent;
   display: flex;
@@ -131,14 +85,8 @@
   transition: all 0.2s ease;
   padding: 0;
 }
-
+.arrow svg,
 .heart svg {
-  width: 16px;
-  height: 16px;
-  fill: none;
-  stroke: var(--black);
-}
-.arrow svg {
   width: 16px;
   height: 16px;
   fill: none;
@@ -167,9 +115,44 @@
   stroke: var(--white);
 }
 
-@media (min-width: 1440px) {
-  .icon {
+@media screen and (min-width: 768px) {
+  .image {
+    height: 275px;
+  }
+  .card {
+    width: 100%;
+  }
+  .title {
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: -0.4px;
+  }
+  .description {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: -0.32px;
+  }
+  .author {
+    font-size: 16px;
+  }
+  .avatar {
+    width: 40px;
+    height: 40px;
+  }
+  .author {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: -0.32px;
+  }
+  .heart,
+  .arrow {
+    width: 42px;
+    height: 42px;
+  }
+  .arrow svg,
+  .heart svg {
     width: 18px;
     height: 18px;
   }
 }
+
