--- a/frontend/src/components/PopularRecipes/PopularRecipes.module.css
+++ b/frontend/src/components/PopularRecipes/PopularRecipes.module.css
@@ -15,7 +15,7 @@
 
 .list {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+  grid-template-columns: 1fr; /* для мобільного 1 колонка */
   gap: 20px;
 }
 @media screen and (min-width: 768px) {
@@ -41,7 +41,7 @@
 @media (min-width: 1440px) {
   .list {
     grid-template-columns: repeat(4, 1fr);
-    gap: 20px;
+    gap: 24px;
   }
 }
 
