--- a/frontend/src/components/LogOutModal/LogOutModal.module.css
+++ b/frontend/src/components/LogOutModal/LogOutModal.module.css
@@ -10,7 +10,7 @@
 .title {
   color: #050505;
   text-align: center;
-  font-family: Mulish;
+  font-family: var(--base-font);
   font-size: 28px;
   font-style: normal;
   font-weight: 800;
@@ -20,11 +20,11 @@
 }
 
 .text {
-  color: #bfbebe;
+  color: var(--gray);
   text-align: center;
   padding-top: 16px;
 
-  font-family: Mulish;
+  font-family: var(--base-font);
   font-size: 14px;
   font-style: normal;
   font-weight: 500;
@@ -76,7 +76,7 @@
     font-size: 32px;
     font-weight: 800;
     line-height: 40px;
-    color: #050505;
+    color: var(--black);
     text-transform: uppercase;
     width: 400px;
   }
