--- a/frontend/src/components/Modal/Modal.module.css
+++ b/frontend/src/components/Modal/Modal.module.css
@@ -12,7 +12,7 @@
   gap: 40px;
 
   border-radius: 20px;
-  background: #fff;
+  background: var(--white);
 }
 
 .closeIcon {
@@ -69,6 +69,6 @@
     max-width: 560px;
 
     border-radius: 30px;
-    background: #fff;
+    background: var(--white);
   }
 }
