--- a/frontend/src/components/SignInModal/SignInModal.module.css
+++ b/frontend/src/components/SignInModal/SignInModal.module.css
@@ -1,12 +1,17 @@
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 100%;
+}
+
 .title {
-  color: #050505;
-  text-align: center;
-  font-family: Mulish;
-  font-size: 28px;
-  font-style: normal;
+  font-family: 'Mulish', sans-serif;
+  font-size: 24px;
   font-weight: 800;
-  line-height: 32px;
-  letter-spacing: -0.56px;
+  color: var(--black);
+  /* margin-bottom: 24px; */
+  text-align: center;
   text-transform: uppercase;
 }
 
@@ -14,7 +19,7 @@
   font-family: 'Mulish', sans-serif;
   font-size: 14px;
   color: var(--dark-gray);
-  padding-top: 16px;
+  margin-top: 24px;
   text-align: center;
 }
 
@@ -29,7 +34,15 @@
   transition: color 0.3s;
 }
 
+.switchButton:hover {
+  color: var(--red);
+}
+
 @media (min-width: 768px) {
+  .container {
+    padding: 24px;
+  }
+
   .title {
     color: #050505;
     text-align: center;
@@ -43,12 +56,7 @@
   }
 
   .switchText {
-    color: #bfbebe;
-    font-family: Mulish;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 18px;
-    letter-spacing: -0.28px;
+    font-size: 16px;
+    margin-top: 32px;
   }
 }
