--- a/frontend/src/components/PopularRecipes/PopularRecipes.module.css
+++ b/frontend/src/components/PopularRecipes/PopularRecipes.module.css
@@ -15,7 +15,7 @@
 
 .list {
   display: grid;
-  grid-template-columns: 1fr; /* для мобільного 1 колонка */
+  grid-template-columns: 1fr; 
   gap: 20px;
 }
 @media screen and (min-width: 768px) {
