--- a/frontend/src/components/RecipePreparation/RecipePreparation.module.css
+++ b/frontend/src/components/RecipePreparation/RecipePreparation.module.css
@@ -1,11 +1,12 @@
 .wrapper {
   display: flex;
   flex-direction: column;
-  
+  width: 100%;
+  max-width: 551px;
 }
-.wrap {
+/* .wrap {
   padding: 0;
-}
+} */
 .title {
   font-size: 18px;
   font-weight: 800;
@@ -49,6 +50,9 @@
   border-color: var(--black);
 }
 @media (min-width: 768px) {
+  .wrapper{
+    max-width: 704px;
+  }
   .title {
     font-size: 20px;
     line-height: 1.2;
