--- a/frontend/src/components/RecipeInfo/RecipeInfo.module.css
+++ b/frontend/src/components/RecipeInfo/RecipeInfo.module.css
@@ -6,10 +6,11 @@
   
   .imageBlock img {
     width: 100%;
-    max-width: 551px;
-    height: 400px;
+    max-width: 343px;
+    height: 318px;
     border-radius: 16px;
     object-fit: cover;
+    margin: 0 auto;
   }
   
   .detailsBlock {
@@ -26,6 +27,7 @@
 
     .imageBlock img {
       max-width: 704px;
+      height: 400px;
       border-radius: 30px;
     }
   }
@@ -41,6 +43,11 @@
   
     .imageBlock {
       flex: 0 0 551px;
+    }
+
+    .imageBlock img {
+      max-width: 551px;
+      border-radius: 30px;
     }
   
     .detailsBlock {
