--- a/frontend/src/components/LogOutModal/LogOutModal.module.css
+++ b/frontend/src/components/LogOutModal/LogOutModal.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  max-width: 375px;
+  max-width: 343px;
   min-width: 320px;
 }
 
@@ -17,19 +17,19 @@
   line-height: 32px;
   letter-spacing: -0.56px;
   text-transform: uppercase;
+  padding-bottom: 16px;
 }
 
 .text {
   color: var(--gray);
   text-align: center;
-  padding-top: 16px;
-
   font-family: var(--base-font);
   font-size: 14px;
   font-style: normal;
   font-weight: 500;
   line-height: 20px;
   letter-spacing: -0.28px;
+  padding-bottom: 32px;
 }
 
 .buttonsContainer {
@@ -37,20 +37,21 @@
   flex-direction: column;
   align-items: center;
   gap: 16px;
-  padding-top: 32px;
+  max-width: 250px;
+  width: 100%;
 }
 
 .modalButton {
   width: 100%;
   display: flex;
   justify-content: center;
-  padding: 14px 114px;
+  padding: 14px 50px;
   font-size: 14px;
   line-height: 20px;
 }
 
 .modalButtonSize {
-  padding: 12px 115px;
+  padding: 12px 50px;
 }
 
 @media (min-width: 768px) {
@@ -59,12 +60,14 @@
     flex-direction: column;
     align-items: center;
     gap: 40px;
-    width: 400px;
+    max-width: 560px;
+    width: 100%;
   }
 
   .title {
     font-size: 0;
     position: relative;
+    padding-bottom: 0px;
   }
 
   .title::after {
@@ -82,25 +85,35 @@
   }
 
   .text {
-    font-size: 18px;
-    max-width: 400px;
+    color: #1a1a1a;
+    text-align: center;
+
+    /* Desktop _tablet/Main */
+    font-family: Mulish;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px; /* 150% */
+    letter-spacing: -0.32px;
+    padding-bottom: 0;
   }
 
-  .buttonsWrapper {
+  .buttonsContainer {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 20px;
+    min-width: 401px;
+    width: 100%;
   }
   .modalButton {
-    padding: 18px 160px;
-    font-size: 16px;
+    padding: 18px 114px;
+    font-size: 15px;
     gap: 10px;
   }
 
   .modalButtonSize {
-    padding: 13px 115px;
-    padding: 15px 165px;
+    padding: 15px 114px;
     gap: 10px;
   }
 }
