--- a/frontend/src/components/AddRecipeForm/AddRecipeForm.module.css
+++ b/frontend/src/components/AddRecipeForm/AddRecipeForm.module.css
@@ -22,11 +22,16 @@
   font-weight: 500;
 }
 
-.timeContainer {
-  width: 100%;
+.selector{
+  margin-top: 32px;
+}
+
+.instructionsWrap {
+  margin-top: 64px;
 }
 
 .actionsGroup {
+  margin-top: 32px;
   display: flex;
   align-items: flex-start;
   gap: 8px;
@@ -74,12 +79,6 @@
   background-color: var(--black);
 }
 
-.publishButton:disabled {
-  opacity: 0.5;
-  cursor: not-allowed;
-  background-color: #666;
-}
-
 @media (min-width: 768px) {
   .form {
     display: flex;
@@ -88,11 +87,40 @@
 
   .formWrapper{
     margin-top: 80px;
+    width: 649px;
   }
+  .categoryTime{
+    margin: 60px 0 60px;
+    display: flex;
+    gap: 20px;
 
-  .timeContainer {
-    grid-column: 2 / 3;
   }
+  .selector{
+    margin-top: 0;
+    width: 315px;
+  }
+  .instructionsWrap {
+    margin-top: 80px;
+  }
+  .actionsGroup {
+    margin-top: 80px;
+  }
+  .deleteBtn svg {
+    stroke: var(--black);
+  }
+  .deleteBtn {
+    width: 56px;
+    height:56px;
+    padding: 16px;
+  }
+  .publishButton {
+    padding: 16px 39px;
+    font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: -0.32px;
+  border-radius: 30px;
+  }
+  
 }
 @media (min-width: 1440px) {
   .form {
