--- a/frontend/src/components/MobileMenu/MobileMenu.module.css
+++ b/frontend/src/components/MobileMenu/MobileMenu.module.css
@@ -9,7 +9,7 @@
   height: 100%;
   width: 100%;
   z-index: 999;
-  padding: 20px 20px 116px 20px;
+  padding: 24px;
   background-color: var(--black);
   color: var(--white);
 }
@@ -38,6 +38,12 @@
   line-height: 1.4;
   letter-spacing: -0.02em;
   text-transform: uppercase;
+  color: var(--white);
+  transition: color 0.3s ease-in-out;
+}
+
+.link:hover {
+  color: var(--gray);
 }
 
 .imageWrapper {
