--- a/frontend/src/components/Navigation/Navigation.module.css
+++ b/frontend/src/components/Navigation/Navigation.module.css
@@ -30,6 +30,11 @@
     gap: 54px;
   }
 }
+@media screen and (min-width: 768px) and (max-width: 1439px) {
+  .navListHidden {
+    display: none;
+  }
+}
 
 .link {
   padding: 14px;
@@ -39,7 +44,7 @@
   line-height: 1.5;
   letter-spacing: -0.02em;
   text-transform: uppercase;
-  transition: color 0.3s, border 0.3s;
+  transition: color 0.3s ease, border 0.3s ease, transform 0.3s ease;
 }
 
 .lightLink {
@@ -50,6 +55,10 @@
 .darkLink {
   composes: link;
   color: var(--white);
+}
+.lightLink:hover,
+.darkLink:hover {
+  transform: scale(1.05);
 }
 
 .lightActive {
