--- a/frontend/src/components/UserBar/UserBar.module.css
+++ b/frontend/src/components/UserBar/UserBar.module.css
@@ -6,7 +6,7 @@
 
 .userBtn {
   min-width: 122px;
-  padding-right: 14px;
+  padding-right: 6px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -16,11 +16,17 @@
   cursor: pointer;
   background-color: var(--dark-gray);
   color: var(--white);
+  transition: transform 0.3s ease;
+}
+
+.userBtn:hover {
+  transform: scale(1.03);
 }
 
 @media screen and (min-width: 768px) {
   .userBtn {
     min-width: 148px;
+    padding-right: 14px;
   }
 }
 
@@ -71,14 +77,20 @@
   top: 100%;
   right: 0;
   margin-top: 8px;
-  background-color: var(--dark-gray);
+  background-color: var(--black);
   border: 1px solid rgba(255, 255, 255, 0.2);
   border-radius: 15px;
   padding: 16px;
   z-index: 10;
   display: flex;
   flex-direction: column;
-  gap: 6px;
+  gap: 4px;
+}
+
+@media screen and (min-width: 768px) {
+  .dropdown {
+    gap: 6px;
+  }
 }
 
 .dropdownItem {
@@ -95,6 +107,7 @@
   cursor: pointer;
   border: none;
   color: var(--white);
+  background-color: transparent;
   text-align: left;
 }
 .dropdownItem:hover {
