--- a/frontend/src/components/sections/Hero/Hero.module.css
+++ b/frontend/src/components/sections/Hero/Hero.module.css
@@ -1,4 +1,10 @@
 .heroSection {
+  width: 100%;
+  padding: 0 8px;
+  margin: 0 auto;
+}
+
+.heroContainer {
   background-color: var(--black);
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
@@ -63,6 +69,10 @@
 @media screen and (min-width: 768px) {
   .heroSection {
     max-width: 768px;
+    padding: 0 16px;
+  }
+
+  .heroContainer {
     padding: 0 29px;
     border-bottom-left-radius: 30px;
     border-bottom-right-radius: 30px;
@@ -92,6 +102,7 @@
 @media screen and (min-width: 1440px) {
   .heroSection {
     max-width: 1440px;
+    padding: 0 20px;
   }
   .textWrapper {
     padding-top: 88px;
